--- a/chat.html
+++ b/chat.html
@@ -236,7 +236,7 @@
   </div>
 
   <script>
-    const API_BASE = "http://127.0.0.1:8000";
+    const API_BASE = ""; // same origin
 
     const projectSelect = document.getElementById("projectSelect");
     const projectStatus = document.getElementById("projectStatus");
